Added events route and controller with GET single and all. Also updated swagger file for functionality on those
